objects/acpoll__Voting_Result__c.object
<CustomObject>
    <fields>
        <fullName>acpoll__Poll_Answer__c</fullName>
        <label>Poll Answer</label>
        <referenceTo>acpoll__Poll_Answer__c</referenceTo>
        <relationshipLabel>Voting Results</relationshipLabel>
        <relationshipName>Voting_Results</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>acpoll__Poll__c</fullName>
        <label>Poll</label>
        <referenceTo>acpoll__Poll__c</referenceTo>
        <relationshipLabel>Voting Results</relationshipLabel>
        <relationshipName>Voting_Results</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>acpoll__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Voting_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Voting Result</label>
    <nameField>
        <displayFormat>VR-{0000}</displayFormat>
        <label>Voting Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Voting Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>